# kulfi

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  DEVELOPMENT_PLAN.md  KEY_ENCODING_SPEC.md  MANUAL_TESTING.md  README.md  RELEASE.md  flake.nix  machine-config.toml  rust-toolchain.toml  test-e2e.sh  test.sh
.github/: FUNDING.yml  MALAI_RELEASE_TEMPLATE.md  MALAI_WIN_INSTALL.md  SKYNET_RELEASE_TEMPLATE.md
.github/workflows/: deploy-ftnet-in.yml  ftnet-app-to-ft.yml  ftnet-template-to-ft.yml  kulfi-account-to-ft.yml  kulfi-app-to-ft.yml  kulfi-org-to-ft.yml  kulfi-profile-to-ft.yml  kulfi-template-to-ft.yml  kulfi-website-to-ft.yml  malai-critical-tests.yml  malai-sh-to-ft.yml  release-kulfi-utils.yml  release-malai.yml  release-skynet.yml  tests-and-formatting.yml
FTNet/: Cargo.toml
FTNet/src/: cli.rs  control.rs  counters.rs  http.rs  lib.rs  main.rs  protocol.rs  start.rs  utils.rs
FTNet/src/client/: mod.rs  ping.rs
FTNet/src/config/: identities.rs  mod.rs  read.rs
FTNet/src/config/dotftnet/: init_if_required.rs  lock.rs  mod.rs
FTNet/src/control/: mod.rs  proxy_pass.rs  server.rs
FTNet/src/control_server/: mod.rs  peer_proxy.rs  proxy_pass.rs  server.rs
FTNet/src/http/: client.rs  mod.rs  peer_proxy.rs  proxy_pass.rs
FTNet/src/identity/: bb8.rs  create.rs  mod.rs  read.rs  run.rs
FTNet/src/peer_server/: http.rs  mod.rs  run.rs  tcp.rs
FTNet/src/server/: mod.rs  run.rs  tcp.rs
FTNet/tests/: proxy_pass.rs
common/: Cargo.toml
common/src/: lib.rs
control-backend-wasm/: Cargo.toml
control-backend-wasm/src/: lib.rs
ftn/: Cargo.toml
ftn-tcp-proxy/: Cargo.toml
ftn/src/: cli.rs  identity.rs  lib.rs  main.rs  protocol.rs  start.rs
ftn/src/config/: identities.rs  mod.rs  read.rs
ftn/src/config/dotftn/: init_if_required.rs  lock.rs  mod.rs
ftn/src/dotftn/: lock.rs  mod.rs
ftn/src/identity/: bb8.rs  create.rs  mod.rs  read.rs  run.rs
ftn/src/server/: run.rs
ftnet/: Cargo.toml
ftnet-tcp-proxy/: Cargo.toml
ftnet-template.fifthtry.site/: FASTN.ftd  index.ftd
ftnet-template.fifthtry.site/.packages/: ftnet.fifthtry.site
ftnet-utils/: Cargo.toml
ftnet-utils/src/: connection.rs  get_endpoint.rs  get_stream.rs  get_stream2.rs  http.rs  http_connection.rs  http_connection_manager.rs  http_peer_proxy.rs  http_to_peer.rs  lib.rs  peer_to_http.rs  peer_to_tcp.rs  protocol.rs  proxy.rs  secret.rs  tcp.rs  utils.rs
ftnet.fifthtry.site/: .is-local  FASTN.ftd  index.ftd
ftnet.in/: FASTN.ftd  index.ftd
ftnet/src/: lib.rs  main.rs  start.rs  utils.rs
kulfi/: Cargo.toml  tauri.conf.json  tauri.conf.json5
kulfi-account.fifthtry.site/: FASTN.ftd  index.ftd
kulfi-account.fifthtry.site/doc/: index.ftd
kulfi-id52/: Cargo.toml
kulfi-id52/src/: errors.rs  keys.rs  lib.rs
kulfi-iroh-utils/: Cargo.toml
kulfi-iroh-utils/src/: get_endpoint.rs  get_stream.rs  http_to_peer.rs  lib.rs  peer_to_http.rs  ping.rs  tcp.rs  utils.rs
kulfi-org.fifthtry.site/: FASTN.ftd  index.ftd
kulfi-org.fifthtry.site/doc/: index.ftd
kulfi-profile.fifthtry.site/: FASTN.ftd  index.ftd
kulfi-profile.fifthtry.site/doc/: index.ftd
kulfi-template.fifthtry.site/: FASTN.ftd  index.ftd
kulfi-utils/: Cargo.toml
kulfi-utils/src/: get_endpoint.rs  get_stream.rs  graceful.rs  http.rs  http_connection_manager.rs  http_to_peer.rs  keys.rs  lib.rs  peer_to_http.rs  peer_to_tcp.rs  ping.rs  protocol.rs  secret.rs  tcp.rs  tcp_to_peer.rs  udp.rs  utils.rs  utils_iroh.rs
kulfi-utils/src/dot_kulfi/: init_if_required.rs  lock.rs  mod.rs
kulfi-utils/tests/: baseline_compat.rs  baseline_compatibility.rs  baseline_key_compatibility.rs
kulfi.app/: FASTN.ftd  ds.ftd  index.ftd  manifesto.ftd
kulfi.fifthtry.site/: FASTN.ftd  index.ftd
kulfi/capabilities/: default.json5
kulfi/src/: browse.rs  expose_http.rs  expose_tcp.rs  http_bridge.rs  lib.rs  main.rs  start.rs  tauri.rs  tcp_bridge.rs
kulfi/src/client/: ping.rs
kulfi/src/config/: identities.rs  mod.rs  read.rs
kulfi/src/config/dot_kulfi/: init_if_required.rs  mod.rs
kulfi/src/control_server/: mod.rs  proxy_pass.rs  server.rs
kulfi/src/identity/: bb8.rs  create.rs  mod.rs  read.rs  run.rs
kulfi/src/peer_server/: run.rs
kulfi/static/: init_view.html  navigation.html
malai/: Cargo.toml  tauri.conf.json
malai-cli-test-utils/: Cargo.toml
malai-cli-test-utils/src/: cluster.rs  lib.rs  malai_cmd.rs  simple.rs  ssh.rs  test_env.rs
malai.sh/: FASTN.ftd  blog.ftd  ds.ftd  get-started.ftd  index.ftd  install.sh  tcp.ftd  vercel.json
malai/src/: browse.rs  cli.rs  config_manager.rs  core_utils.rs  daemon.rs  daemon_socket.rs  expose_http.rs  expose_tcp.rs  expose_tcp_udp.rs  expose_udp.rs  folder.rs  generate.rs  http_bridge.rs  http_proxy.rs  http_proxy_remote.rs  identity.rs  keygen.rs  lib.rs  machine_init.rs  main.rs  malai_server.rs  run.rs  server.rs  simple_server.rs  start.rs  tcp_bridge.rs  udp_bridge.rs
malai/src/commands/: cluster.rs  daemon.rs  mod.rs  remote_access.rs
malai/src/config/: identities.rs  mod.rs  read.rs
malai/src/config/dot_malai/: init_if_required.rs  lock.rs  mod.rs
malai/src/control_server/: mod.rs  proxy_pass.rs  server.rs
malai/src/core/: agent.rs  client.rs  cluster.rs  config.rs  mod.rs  protocol.rs  server.rs
malai/src/folder/: mod.rs  render_folder.rs  show-file.html  show-folder.html  skeleton.html
malai/src/identity/: bb8.rs  create.rs  read.rs  run.rs
malai/src/peer_server/: run.rs
malai/templates/folder/: skeleton.html
malai/tests/: README.md  client_server_connectivity.rs  http_example_conf.toml  integration_tests.rs
malai/tests-disabled/: malai_binary_test.rs  ssh_agent_test.rs  ssh_corrected_workflow_test.rs  ssh_create_cluster_test.rs  ssh_two_machine_test.rs
scripts/: auto.sh  build-wasm.sh  optimise-wasm.sh  publish-app.sh
sdk/: Cargo.toml
skynet/: Cargo.toml
skynet/src/: expose_http.rs  expose_tcp.rs  http.rs  http_bridge.rs  lib.rs  main.rs  tcp_bridge.rs
test-keys/: baseline-id52.txt  key-1.txt  key-2.txt  key-3.txt
tests/: ssh_config_test.rs  ssh_e2e_basic.rs  ssh_unit_test.rs
(+51 files in other folders)
