[workspace]
members = ["FTNet"]
resolver = "2"

[workspace.package]
authors = [
    "Amit Upadhyay <upadhyay@gmail.com>",
]
edition = "2024"
description = "FTN: FifthTry Network"
license = "UPL-1.0"
repository = "https://github.com/FifthTry/ftnet"
homepage = "https://ftnet.in"
publish = true
rust-version = "1.85"

[profile.release]
strip = true

[workspace.dependencies]
# Please do not specify a dependency more precisely than needed. If version "1" works, do
# not specify "1.1.42". This reduces the number of total dependencies. For example, if you
# specify 1.1.42 and someone else who only needed "1" also specified 1.1.37, we end up having
# the same dependency getting compiled twice.
#
# In the future, we may discover that our code does not indeed work with "1", say it ony works
# for 1.1 onwards, or 1.1.25 onwards, in which case use >= 1.1.25 etc. Saying our code
# only works for 1.1.42 and not 1.1.41 nor 1.1.43 is really weird, and most likely wrong.
#
# If you are not using the latest version intentionally, please do not list it in this section
# and create its own [dependencies.<name>] section. Also, document it with why are you not
# using the latest dependency, and what is the plan to move to the latest version.
bb8 = "0.9"
clap = { version = "4", features = ["derive"] }
data-encoding = "2.8"
directories = "6.0.0"
eyre = "0.6"
file-guard = "0.2.0"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["tokio", "server"] }
iroh = "0.34"
keyring = "4.0.0-rc.1"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
#tokio-util = "0.7"


[workspace.dependencies.rand]
# we are intentionally using an older version to be compatible with the rand
# version used in the iroh crate
version = "0.8.5"
