[workspace]
members = ["malai", "kulfi", "kulfi-utils"]
resolver = "2"

[workspace.package]
authors = [
    "Amit Upadhyay <upadhyay@gmail.com>",
    "Siddhant Kumar <siddhantk232@gmail.com>",
]
edition = "2024"
license = "UPL-1.0"
repository = "https://github.com/kulfi-project/kulfi"
homepage = "https://kulfi.app"
publish = true
rust-version = "1.87"  # update this when you update rust-toolchain.toml

[profile.release]
strip = true

[workspace.dependencies]
# Please do not specify a dependency more precisely than needed. If version "1" works, do
# not specify "1.1.42". This reduces the number of total dependencies. For example, if you
# specify 1.1.42 and someone else who only needed "1" also specified 1.1.37, we end up having
# the same dependency getting compiled twice.
#
# In the future, we may discover that our code does not indeed work with "1", say it ony works
# for 1.1 onwards, or 1.1.25 onwards, in which case use >= 1.1.25 etc. Saying our code
# only works for 1.1.42 and not 1.1.41 nor 1.1.43 is really weird, and most likely wrong.
#
# If you are not using the latest version intentionally, please do not list it in this section
# and create its own [dependencies.<name>] section. Also, document it with why are you not
# using the latest dependency, and what is the plan to move to the latest version.
bb8 = "0.9"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
clap-verbosity-flag = "3"
colored = "3"
data-encoding = "2.8"
# diesel = { version = "2", default-features = false, features = ["chrono"] }
directories = "6.0.0"
eyre = "0.6"
file-guard = "0.2.0"
ft-sdk = { version = "0.6.3", features = ["sqlite-default", "auth-provider", "field-extractors"] }
futures-util = "0.3"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1.15", features = ["tokio", "server"] }
iroh = { version = "0.35", features = ["discovery-local-network"] }
keyring = { version = "4.0.0-rc.1", features = ["vendored"] }
kulfi-utils = { path = "kulfi-utils", version = "0.1.0" }
mime_guess = "2"
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-build = { version = "2", features = ["config-json5"] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webbrowser = "1"
zip = { version = "4", default-features = false }

[workspace.dependencies.fastn-observer]
git = "https://github.com/fastn-stack/fastn-observer"
rev = "5f64c7b"

[workspace.dependencies.tauri]
version = "2"
default-features = false
features = ["custom-protocol", "wry", "common-controls-v6", "unstable"]

[workspace.dependencies.rand_core]
# iroh is on 0.6 so we use the same to avoid building multiple crates
# https://github.com/n0-computer/iroh/issues/3198
version = "0.6"

[workspace.dependencies.rand]
# we are intentionally using an older version to be compatible with the rand
# version used in the iroh crate
# https://github.com/n0-computer/iroh/issues/3198
version = "0.8.5"
