[workspace]
members = ["malai", "kulfi", "kulfi-utils", "kulfi-id52", "malai-cli-test-utils"]
resolver = "2"

[workspace.package]
authors = [
    "Amit Upadhyay <upadhyay@gmail.com>",
    "Siddhant Kumar <siddhantk232@gmail.com>",
]
edition = "2024"
license = "UPL-1.0"
repository = "https://github.com/fastn-stack/kulfi"
homepage = "https://kulfi.app"
publish = true
rust-version = "1.89" # update this when you update rust-toolchain.toml

[profile.release]
strip = true

[workspace.dependencies]
# Please do not specify a dependency more precisely than needed. If version "1" works, do
# not specify "1.1.42". This reduces the number of total dependencies. For example, if you
# specify 1.1.42 and someone else who only needed "1" also specified 1.1.37, we end up having
# the same dependency getting compiled twice.
#
# In the future, we may discover that our code does not indeed work with "1", say it ony works
# for 1.1 onwards, or 1.1.25 onwards, in which case use >= 1.1.25 etc. Saying our code
# only works for 1.1.42 and not 1.1.41 nor 1.1.43 is really weird, and most likely wrong.
#
# If you are not using the latest version intentionally, please do not list it in this section
# and create its own [dependencies.<name>] section. Also, document it with why are you not
# using the latest dependency, and what is the plan to move to the latest version.
bb8 = "0.9"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
clap-verbosity-flag = "3"
colored = "3"
data-encoding = "2.8"
diffy = "0.4"
directories = "6.0.0"
dirs = "5"
eyre = "0.6"
file-guard = "0.2.0"
futures-util = "0.3"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1.15", features = ["tokio", "server"] }
iroh = { version = "0.91", features = ["discovery-local-network"] }
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "linux-native",
    "vendored",
] }
libc = "0.2"
kulfi-utils = { path = "kulfi-utils" }
kulfi-id52 = { path = "kulfi-id52" }
fastn-p2p = { git = "https://github.com/fastn-stack/fastn.git", rev = "d50fff5fe7bc4f81f34db71f381b7c47a9a812f7" }
fastn-net = { git = "https://github.com/fastn-stack/fastn.git", rev = "d50fff5fe7bc4f81f34db71f381b7c47a9a812f7" }
fastn-id52 = { git = "https://github.com/fastn-stack/fastn.git", rev = "d50fff5fe7bc4f81f34db71f381b7c47a9a812f7" }
mime_guess = "2"
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-build = { version = "2", features = ["config-json5"] }
tauri-plugin-opener = "2"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webbrowser = "1"
zip = { version = "4", default-features = false }

[workspace.dependencies.tauri]
version = "2"
default-features = false
features = ["custom-protocol", "wry", "common-controls-v6", "unstable"]

[workspace.dependencies.rand]
# we are intentionally using an older version to be compatible with the rand
# version used in the iroh crate
# https://github.com/n0-computer/iroh/issues/3198
version = "0.8.5"
