[package]
name = "ftnet"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "FTNet: FifthTry Network"


[dependencies]
bb8.workspace = true
clap.workspace = true
data-encoding.workspace = true
directories.workspace = true
eyre.workspace = true
file-guard.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper-util.workspace = true
hyper.workspace = true
iroh.workspace = true
keyring.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
