[package]
name = "ftnet"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "FTNet: FifthTry Network"


[dependencies]
clap.workspace = true
directories.workspace = true
eyre.workspace = true
fastn-observer.workspace = true
file-guard.workspace = true
ftnet-sdk.workspace = true
ftnet-utils.workspace = true
http-body-util.workspace = true
hyper-util.workspace = true
hyper.workspace = true
iroh.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
zip.workspace = true
