[package]
name = "control"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Backend for ftnet.fifthtry.site package"

[lib]
crate-type = ["cdylib"]


[dependencies]
# diesel.workspace = true
# serde.workspace = true
common.workspace = true
ft-sdk.workspace = true
serde_json.workspace = true
