[package]
name = "control-backend-wasm"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Backend for ftnet.fifthtry.site package"
publish = false

[lib]
crate-type = ["cdylib"]


[dependencies]
# diesel.workspace = true
# serde.workspace = true
ftnet-sdk.workspace = true
ft-sdk.workspace = true
serde_json.workspace = true
