[package]
name = "ftn"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "FTN: FifthTry Network"


[dependencies]
clap.workspace = true
directories.workspace = true
eyre.workspace = true
file-guard.workspace = true
tokio.workspace = true
iroh.workspace = true
rand.workspace = true
keyring.workspace = true
