[package]
name = "ftn"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "FTN: FifthTry Network"


[dependencies]
bb8.workspace = true
clap.workspace = true
directories.workspace = true
eyre.workspace = true
file-guard.workspace = true
ftn-tcp-proxy.workspace = true
iroh.workspace = true
keyring.workspace = true
rand.workspace = true
tokio.workspace = true
