[package]
name = "ftnet-utils"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "ftnet utilities p2p"

[dependencies]
data-encoding.workspace = true
eyre.workspace = true
ftnet-common.workspace = true
http-body-util.workspace = true
hyper.workspace = true
iroh.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing.workspace = true
