[package]
name = "ftnet-utils"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "ftnet utilities"
homepage.workspace = true
license.workspace = true

[dependencies]
data-encoding.workspace = true
eyre.workspace = true
ftnet-sdk.workspace = true
http-body-util.workspace = true
hyper.workspace = true
iroh.workspace = true
keyring.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing.workspace = true
hyper-util.workspace = true
bb8.workspace = true
rand_core.workspace = true
