[package]
name = "kulfi-id52"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "ID52 identity and cryptographic key management"
license.workspace = true

[dependencies]
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
data-encoding = "2.6"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"

[dev-dependencies]
serde_json = "1.0"
hex = "0.4"
