[package]
name = "kulfi-iroh-utils"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Iroh-specific utilities for kulfi"
homepage.workspace = true
license.workspace = true

[dependencies]
kulfi-utils = { workspace = true, features = ["iroh"] }
iroh.workspace = true
eyre.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
futures-util.workspace = true
bytes.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
colored.workspace = true
bb8.workspace = true
