[package]
name = "kulfi-utils"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
description = "ftnet utilities"
homepage.workspace = true
license.workspace = true

[dependencies]
bb8.workspace = true
colored.workspace = true
data-encoding.workspace = true
eyre.workspace = true
ftnet-sdk.workspace = true
http-body-util.workspace = true
http.workspace = true
hyper-util.workspace = true
hyper.workspace = true
iroh.workspace = true
keyring = { workspace = true, optional = true }
rand.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing.workspace = true

[features]
default = ["keyring"]
keyring = ["dep:keyring"]
