[package]
name = "kulfi-utils"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
description = "ftnet utilities"
homepage.workspace = true
license.workspace = true

[dependencies]
bb8.workspace = true
bytes.workspace = true
colored.workspace = true
data-encoding.workspace = true
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
eyre.workspace = true
file-guard.workspace = true
futures-util.workspace = true
http-body-util.workspace = true
hyper-util.workspace = true
hyper.workspace = true
iroh = { workspace = true, optional = true }
keyring.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing.workspace = true

[features]
default = ["iroh"]
iroh = ["dep:iroh"]

[dev-dependencies]
hex = "0.4"
