[package]
name = "kulfi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Kulfi: Open Source, General Purpose, Sovereign, Decentralized, Peer to Peer Internet"


[features]
ui = ["tauri", "tauri-plugin-opener", "tauri-build", "http"]

[dependencies]
clap-verbosity-flag.workspace = true
clap.workspace = true
directories.workspace = true
eyre.workspace = true
file-guard.workspace = true
ftnet-sdk.workspace = true
http-body-util.workspace = true
http = { workspace = true, optional = true }
hyper-util.workspace = true
hyper.workspace = true
iroh.workspace = true
kulfi-utils.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
tauri-plugin-opener = { workspace = true, optional = true }
tauri = { workspace = true, optional = true }
tokio-stream.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
zip.workspace = true


[target.'cfg(target_os = "linux")'.dependencies]
libdbus-sys.workspace = true


[build-dependencies]
tauri-build = { workspace = true, optional = true }
