[package]
name = "kulfi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Kulfi: Open Source, General Purpose, Sovereign, Decentralized, Peer to Peer Internet"

[dependencies]
clap-verbosity-flag.workspace = true
clap.workspace = true
directories.workspace = true
eyre.workspace = true
file-guard.workspace = true
ftnet-sdk.workspace = true
http-body-util.workspace = true
hyper-util.workspace = true
hyper.workspace = true
iroh.workspace = true
kulfi-utils.workspace = true
reqwest.workspace = true
serde.workspace = true
tauri-plugin-opener.workspace = true
tauri.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
zip.workspace = true


[build-dependencies]
tauri-build.workspace = true
