[package]
name = "malai"
version = "0.3.1"
authors.workspace = true
edition.workspace = true
description = "malai: Kulfi Network Toolkit"
license.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
clap-verbosity-flag.workspace = true
clap.workspace = true
colored.workspace = true
eyre.workspace = true
futures-util.workspace = true
http-body-util.workspace = true
hyper-util.workspace = true
hyper.workspace = true
iroh.workspace = true
kulfi-utils.workspace = true
kulfi-id52.workspace = true
mime_guess.workspace = true
percent-encoding.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
webbrowser.workspace = true
toml = "0.9.5"
tracing-appender = "0.2.3"
