[package]
name = "skynet"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "skynet: FTNet Toolkit"
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
clap-verbosity-flag.workspace = true
clap.workspace = true
eyre.workspace = true
ftnet-utils.workspace = true
http-body-util.workspace = true
hyper-util.workspace = true
hyper.workspace = true
iroh.workspace = true
rand.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
